Correction du probleme de collapse du menu

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -46,3 +46,7 @@ body {
 	height: 25px;
 	width: auto;
 }
+
+.nav, .pagination, .carousel, .panel-title a { 
+	cursor: pointer; 
+}
